--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "ngx-bootstrap": "^18.0.2",
     "primeflex": "^3.3.1",
     "primeng": "^17.18.10",
